docs/source/examples/421/out/out-04.txt

PLAY [Create SSL certificate.] *************************************************

TASK [Gathering Facts] *********************************************************
ok: [www-3]

TASK [Vars: Include OS vars] ***************************************************
included: vbotka.freebsd.lib for www-3

TASK [vbotka.freebsd.lib : Al_include_os_vars_path_incr: vars from /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars/defaults] ***
ok: [www-3] => (item=/scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars/defaults/default.yml)
ok: [www-3] => (item=/scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars/defaults/FreeBSD.yml)

TASK [vbotka.freebsd.lib : Al_include_os_vars_path_incr: vars from /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars] ***
ok: [www-3] => (item=/scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/vars/defaults.yml)

TASK [vbotka.freebsd.certificate : Vars: Add certificate_data_simple to certificate_data] ***
ok: [www-3]

TASK [vbotka.freebsd.certificate : Cert-openssl-privatekey: Generate OpenSSL private keys.] ***
[ERROR]: Task failed: Module failed: The directory /usr/local/etc/ssl/private does not exist or the file is not a directory
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/cert-openssl-privatekey.yml:5:7

3   block:
4
5     - name: "Cert-openssl-privatekey: Generate OpenSSL private keys."
        ^ column 7

failed: [www-3] (item=file:/usr/local/etc/ssl/private/www-3.key CN:www-3) => 
    ansible_loop_var: item
    changed: false
    item:
        CN: www-3
        crt: www-3.crt
        csr: www-3.csr
        private: www-3.key
    msg: The directory /usr/local/etc/ssl/private does not exist or the file is not a
        directory
    name: /usr/local/etc/ssl/private
failed: [www-3] (item=file:/usr/local/etc/ssl/private/www.foo.bar.key CN:www.foo.bar) => 
    ansible_loop_var: item
    changed: false
    item:
        CN: www.foo.bar
        crt: www.foo.bar.crt
        csr: www.foo.bar.csr
        private: www.foo.bar.key
    msg: The directory /usr/local/etc/ssl/private does not exist or the file is not a
        directory
    name: /usr/local/etc/ssl/private

TASK [vbotka.freebsd.certificate : Cert-openssl-privatekey: Generate OpenSSL private keys failed.] ***
[ERROR]: Task failed: Finalization of task args for 'ansible.builtin.debug' failed: Error while resolving value for 'msg': The filter plugin 'ansible.builtin.to_nice_yaml' failed: ('cannot represent an object', <<Omit>>)

Task failed.
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/cert-openssl-privatekey.yml:33:7

31   rescue:
32
33     - name: "Cert-openssl-privatekey: Generate OpenSSL private keys failed."
         ^ column 7

<<< caused by >>>

Finalization of task args for 'ansible.builtin.debug' failed.
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/cert-openssl-privatekey.yml:34:7

32
33     - name: "Cert-openssl-privatekey: Generate OpenSSL private keys failed."
34       ansible.builtin.debug:
         ^ column 7

<<< caused by >>>

Error while resolving value for 'msg': The filter plugin 'ansible.builtin.to_nice_yaml' failed: ('cannot represent an object', <<Omit>>)
Origin: /scratch/collections/ansible_collections/vbotka/freebsd/roles/certificate/tasks/cert-openssl-privatekey.yml:35:14

33     - name: "Cert-openssl-privatekey: Generate OpenSSL private keys failed."
34       ansible.builtin.debug:
35         msg: |
                ^ column 14

fatal: [www-3]: FAILED! => 
    msg: 'Task failed: Finalization of task args for ''ansible.builtin.debug'' failed:
        Error while resolving value for ''msg'': The filter plugin ''ansible.builtin.to_nice_yaml''
        failed: (''cannot represent an object'', <<Omit>>)'

PLAY RECAP *********************************************************************
www-3                      : ok=5    changed=0    unreachable=0    failed=1    skipped=6    rescued=1    ignored=0   

